--- a/inviter.less
+++ b/inviter.less
@@ -66,28 +66,47 @@ body,html,.swiper-container{height: 100%;}
 	}
 	.filter{
 		position: absolute;left: 0;top: 0;right: 0;bottom: 0;
-		background: #042645;opacity: 0.4;
+		background: #042645;opacity: 0;
+		transition:1s ease 0.5s;
 	}
 	.title{
 		position: absolute;left: 0;top: 240px;right: 0;text-align: center;color: #fff;
 		h1{
 			font: 140px/140px "Gill Sans";
+			opacity: 0;
+			transition:0.5s ease 1s;
 		}
 		span{
 			font:40px/60px "Gill Sans";
+			opacity: 0;
+			transition:0.5s ease 1.25s;
 		}
 	}
 	.time{
 		position: absolute;left: 0;right: 0;top: 650px;
 		font:60px/60px "Helvetica";color: #fff;text-align: center;
+		opacity: 0;
+		transition:0.5s ease 1.5s;
 	}
 	.name{
 		position: absolute;left: 0;right: 0;top: 725px;
 		font:40px/60px "Helvetica";color: #fff;text-align: center;
+		opacity: 0;
+		transition:0.5s ease 1.75s;
 		span{font-size: 28px;}
 	}
+	.arr{
+		position: absolute;left: 50%;bottom: 40px;
+		width: 88px;height: 48px;margin-left: -44px;
+		background: url(images/arr.png) center center no-repeat;
+		opacity: 0;
+		transition:0.5s ease 2s;
+	}
 }
-
+.section1.swiper-slide-active{
+	.filter{opacity: 0.4;}
+	.title h1,.title span,.name,.time,.arr{opacity: 1;}
+}
 
 
 
