--- a/inviter.css
+++ b/inviter.css
@@ -320,12 +320,12 @@ html,
 .swiper-container {
   height: 100%;
 }
+.swiper-slide {
+  position: relative;
+}
 .section1 {
   background: url(images/bg1.jpg);
   background-size: cover;
-}
-.section1 .swiper-slide {
-  position: relative;
 }
 .section1 .filter {
   position: absolute;
@@ -348,12 +348,12 @@ html,
 .section1 .title h1 {
   font: 140px/140px "Gill Sans";
   opacity: 0;
-  transition: 0.5s ease 1s;
+  transition: 1.5s ease 1s;
 }
 .section1 .title span {
   font: 40px/60px "Gill Sans";
   opacity: 0;
-  transition: 0.5s ease 1.25s;
+  transition: 1.5s ease 1.5s;
 }
 .section1 .time {
   position: absolute;
@@ -364,7 +364,7 @@ html,
   color: #fff;
   text-align: center;
   opacity: 0;
-  transition: 0.5s ease 1.5s;
+  transition: 1.5s ease 2s;
 }
 .section1 .name {
   position: absolute;
@@ -375,12 +375,12 @@ html,
   color: #fff;
   text-align: center;
   opacity: 0;
-  transition: 0.5s ease 1.75s;
+  transition: 1.5s ease 2.5s;
 }
 .section1 .name span {
   font-size: 28px;
 }
-.section1 .arr {
+.arr {
   position: absolute;
   left: 50%;
   bottom: 40px;
@@ -389,7 +389,8 @@ html,
   margin-left: -44px;
   background: url(images/arr.png) center center no-repeat;
   opacity: 0;
-  transition: 0.5s ease 2s;
+  transition: 2s ease 3s;
+  animation: arr 0.8s infinite;
 }
 .section1.swiper-slide-active .filter {
   opacity: 0.4;
@@ -400,4 +401,84 @@ html,
 .section1.swiper-slide-active .time,
 .section1.swiper-slide-active .arr {
   opacity: 1;
+}
+.section2 {
+  background: url(images/bg2.jpg) center bottom;
+  background-size: cover;
+}
+.section2 .text {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 100px;
+  font: 36px/60px "";
+  color: #0e4d6c;
+  text-align: center;
+}
+.section2 li {
+  opacity: 0;
+}
+.section2 li:nth-child(1) {
+  transition: 1s ease 0.5s;
+}
+.section2 li:nth-child(2) {
+  transition: 1s ease 1s;
+}
+.section2 li:nth-child(3) {
+  transition: 1s ease 1.5s;
+}
+.section2 li:nth-child(4) {
+  margin-top: 60px;
+  transition: 1s ease 2s;
+}
+.section2 li:nth-child(5) {
+  transition: 1s ease 2.5s;
+}
+.section2 li:nth-child(6) {
+  margin-top: 60px;
+  transition: 1s ease 3s;
+}
+.section2 li:nth-child(7) {
+  transition: 1s ease 3.5s;
+}
+.section2 li:nth-child(8) {
+  transition: 1s ease 4s;
+}
+.section2 .arr {
+  transition: 2s ease 4.5s;
+}
+.section2.swiper-slide-active .text li {
+  opacity: 1;
+}
+.section2.swiper-slide-active .arr {
+  opacity: 1;
+}
+.section3 {
+  background: url(images/bg3.jpg) center bottom;
+  background-size: cover;
+}
+.section3 .text {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 100px;
+  font: 40px/80px "";
+  color: #fff;
+  text-align: center;
+}
+.section3 .text #run {
+  font-size: 80px;
+  font-weight: bold;
+  vertical-align: sub;
+}
+@keyframes arr {
+  0% {
+    bottom: 40px;
+  }
+  40% {
+    bottom: 30px;
+  }
+  100% {
+    bottom: 40px;
+  }
 }
