--- a/inviter.less
+++ b/inviter.less
@@ -164,7 +164,7 @@ body,html,.swiper-container{height: 100%;}
 		position: absolute;left: 0;right: 0;top: 100px;
 		font:40px/80px "";color: #fff;text-align: center;
 		#run{
-			font-size: 80px;font-weight: bold;vertical-align: sub;
+			font-size: 80px;vertical-align: bottom;
 		}
 	}
 }
