--- a/inviter.less
+++ b/inviter.less
@@ -56,18 +56,24 @@ blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}
 .ma12,.mr12{margin-right:12px}
 .ma12,.mb12{margin-bottom:12px}
 .ma12,.ml12{margin-left:12px}
-
+body{font-size: 80px;line-height: 1;}
 body,html,.swiper-container{height: 100%;}
 .swiper-slide{
 	position: relative;
 }
 .section1{
-	background: url(images/bg1.jpg);
-	background-size: cover;
 	.filter{
 		position: absolute;left: 0;top: 0;right: 0;bottom: 0;
 		background: #042645;opacity: 0;
 		transition:1s ease 0.5s;
+	}
+	.bg{
+		background: url(images/bg1.jpg);
+		background-size: cover;
+		position: absolute;left: 0;top: 0;right: 0;bottom: 0;
+		transition: 5s ease;
+		transform-origin: center bottom;
+		transform: scale(1.03,1.03);
 	}
 	.title{
 		position: absolute;left: 0;top: 240px;right: 0;text-align: center;color: #fff;
@@ -107,6 +113,7 @@ body,html,.swiper-container{height: 100%;}
 .section1.swiper-slide-active{
 	.filter{opacity: 0.4;}
 	.title h1,.title span,.name,.time,.arr{opacity: 1;}
+	.bg{transform: scale(1.05,1.05);}
 }
 
 .section2{
@@ -166,6 +173,203 @@ body,html,.swiper-container{height: 100%;}
 		#run{
 			font-size: 80px;vertical-align: sub;
 		}
+	}
+	.arr{
+		opacity: 1;
+	}
+}
+.section4{
+	background: url(images/bg4.jpg) center bottom;
+	background-size: cover;
+	.text{
+		position: absolute;left: 0;right: 0;top: 100px;
+		font:40px/80px "";color: #fff;text-align: center;
+		span{
+			font-size: 80px;vertical-align: sub;
+		}
+	}
+	.arr{
+		opacity: 1;
+	}
+}
+.section5{
+	background: url(images/bg5.jpg) center bottom;
+	background-size: cover;
+	.text{
+		position: absolute;left: 0;right: 0;top: 100px-16;
+		font:40px/72px "";color: #fff;text-align: center;
+	}
+	.arr{
+		opacity: 1;
+	}
+}
+.section6{
+	background: url(images/bg6.jpg) center bottom;
+	background-size: cover;
+	.text{
+		position: absolute;left: 0;right: 0;top: 100px-16;
+		font:40px/72px "";color: #fff;text-align: center;
+	}
+	.arr{
+		opacity: 1;
+	}
+}
+.section7{
+	background: url(images/bg7.jpg) center bottom;
+	background-size: cover;
+	.text{
+		position: absolute;left: 0;right: 0;top: 100px-16;
+		font:40px/72px "";color: #fff;text-align: center;
+	}
+	.arr{
+		opacity: 1;
+	}
+}
+.section8{
+	background: url(images/bg8.jpg) center bottom;
+	background-size: cover;
+	.text{
+		position: absolute;left: 0;right: 0;top: 100px-16;
+		font:40px/72px "";color: #fff;text-align: center;
+	}
+	.arr{
+		opacity: 1;
+	}
+}
+.section9{
+	background: url(images/bg9.jpg) center bottom;
+	background-size: cover;
+	.text{
+		position: absolute;left: 0;right: 0;bottom: 205px;
+		font:40px/72px "";color: #fff;text-align: center;
+	}
+	.arr{
+		opacity: 1;
+	}
+}
+.section10{
+	background: url(images/bg10.jpg) center bottom;
+	background-size: cover;
+	.text{
+		position: absolute;left: 230px;right: 0;top: 100px-16;
+		font:40px/72px "";color: #fff;text-align: left;
+		span{
+			display: block;
+			text-indent: 2.5em;
+		}
+	}
+	.arr{
+		opacity: 1;
+	}
+}
+.section11{
+	background: url(images/bg11.jpg) center bottom;
+	background-size: cover;
+	.text{
+		position: absolute;left: 0;right: 0;top: 100px-16;
+		font:40px/72px "";color: #fff;text-align: center;
+	}
+	.arr{
+		opacity: 1;
+	}
+}
+.section12{
+	background: url(images/bg12.jpg) center bottom;
+	background-size: cover;
+	.arr{
+		opacity: 1;background-image: url(images/arr_blue.png);
+	}
+}
+.section13{
+	background: url(images/bg13.jpg) center bottom;
+	background-size: cover;
+	.title{
+		position: absolute;left: 50px;top: 50%;
+		margin-top: -515px;
+		font:bold 90px/1 "Gill","Sans";color: #fff;
+	}
+	.info{
+		position: absolute;left: 50px;top: 50%;
+		font:34px/48px "";color: #e1e5ce;
+		p{
+			font-size: 30px;color: #fff;
+		}
+	}
+	.time{
+		margin-top: -370px;
+	}
+	.hotel{
+		margin-top: -250px;
+	}
+	.address{
+		margin-top: -130px;
+	}
+	.map{
+		position: absolute;left: 40px;top: 50%;margin-top: 20px;
+		background: url(images/map.png) no-repeat;
+		width: 670px;height: 360px;
+	}
+	.location{
+		position: absolute;left: 478px;top: 186px;
+		background: url(images/location.png) no-repeat;
+		width: 23px;height: 32px;
+	}
+	.shadow{
+		position: absolute;left: 486px;top: 212px;
+		background: url(images/shadow.png) no-repeat;
+		width: 20px;height: 8px;
+	}
+	.tip{
+		position: absolute;left: 333px;top: 75px;
+		background: url(images/tip.png) no-repeat;
+		width: 320px;height: 142px;
+	}
+	.arr{
+		opacity: 1;
+	}
+}
+.section14{
+	background: #fff;
+	.title{
+		position: absolute;left: 50px;top: 50%;
+		margin-top: -515px;
+		font:bold 90px/1 "Gill","Sans";color: #1e666c;
+	}
+	.line{
+		position: absolute;left: 40px;right: 40px;top: 50%;
+		overflow: hidden;
+		label{
+			float: left;display: block;
+			width: 90px;
+			font:32px/82px "";color: #1e666c;
+		}
+		.input{
+			float: right;position: relative;
+			width: 575px-50;padding: 0 25px;
+			background: #f7f7f7;overflow: hidden;
+			border:1px solid #e2e2e2;border-radius: 7px;
+			input{
+				display: block;width: 100%;height: 80px;
+				font:28px/80px "";color: #444;
+				background-color: transparent;border: none;
+			}
+		}
+		.select-cnt{
+			font:28px/80px "";color: #ccc;
+		}
+		select{
+			display: block;position: absolute;left: 0;top: 0;right: 0;bottom: 0;
+			opacity: 0;
+		}
+	}
+	.line-name{
+		margin-top: -365px;
+	}
+	.line-people{
+		margin-top: -245px;
+	}
+	.line-wish{
+		margin-top: -125px;
 	}
 }
 @keyframes arr { 
