--- a/inviter.css
+++ b/inviter.css
@@ -327,6 +327,9 @@ html,
 .swiper-slide {
   position: relative;
 }
+* {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
 .section1 .filter {
   position: absolute;
   left: 0;
@@ -521,7 +524,22 @@ html,
   color: #fff;
   text-align: center;
 }
+.section5 .text .s51 {
+  opacity: 0;
+  transition: 2s ease 0.5s;
+}
+.section5 .text .s52 {
+  opacity: 0;
+  transition: 2s ease 1.5s;
+}
 .section5 .arr {
+  transition: 2s ease 2.5s;
+}
+.section5.swiper-slide-active .text .s51,
+.section5.swiper-slide-active .text .s52 {
+  opacity: 1;
+}
+.section5.swiper-slide-active .arr {
   opacity: 1;
 }
 .section6 {
@@ -537,7 +555,22 @@ html,
   color: #fff;
   text-align: center;
 }
+.section6 .text .s61 {
+  opacity: 0;
+  transition: 2s ease 0.25s;
+}
+.section6 .text .s62 {
+  opacity: 0;
+  transition: 2s ease 1.25s;
+}
 .section6 .arr {
+  transition: 2s ease 2.25s;
+}
+.section6.swiper-slide-active .text .s61,
+.section6.swiper-slide-active .text .s62 {
+  opacity: 1;
+}
+.section6.swiper-slide-active .arr {
   opacity: 1;
 }
 .section7 {
@@ -553,7 +586,22 @@ html,
   color: #fff;
   text-align: center;
 }
+.section7 .text .s71 {
+  opacity: 0;
+  transition: 2s ease 0.5s;
+}
+.section7 .text .s72 {
+  opacity: 0;
+  transition: 2s ease 1.5s;
+}
 .section7 .arr {
+  transition: 2s ease 2.5s;
+}
+.section7.swiper-slide-active .text .s71,
+.section7.swiper-slide-active .text .s72 {
+  opacity: 1;
+}
+.section7.swiper-slide-active .arr {
   opacity: 1;
 }
 .section8 {
@@ -569,7 +617,17 @@ html,
   color: #fff;
   text-align: center;
 }
+.section8 .text .s81 {
+  opacity: 0;
+  transition: 2s ease 0.5s;
+}
 .section8 .arr {
+  transition: 2s ease 1.5s;
+}
+.section8.swiper-slide-active .text .s81 {
+  opacity: 1;
+}
+.section8.swiper-slide-active .arr {
   opacity: 1;
 }
 .section9 {
@@ -585,7 +643,26 @@ html,
   color: #fff;
   text-align: center;
 }
+.section9 .text p:nth-child(1),
+.section9 .text p:nth-child(2) {
+  opacity: 0;
+  transform: translate(0, 80px);
+  transition: 2s ease 0.5s;
+}
+.section9 .text p:nth-child(3),
+.section9 .text p:nth-child(4) {
+  opacity: 0;
+  transform: translate(0, 80px);
+  transition: 2s ease 2s;
+}
 .section9 .arr {
+  transition: 2s ease 4s;
+}
+.section9.swiper-slide-active .text p {
+  opacity: 1;
+  transform: translate(0, 0);
+}
+.section9.swiper-slide-active .arr {
   opacity: 1;
 }
 .section10 {
@@ -601,11 +678,27 @@ html,
   color: #fff;
   text-align: left;
 }
-.section10 .text span {
+.section10 .text span.s2 {
   display: block;
   text-indent: 2.5em;
+  opacity: 0;
+  transform: translate(50px, 0);
+  transition: 2s ease 2s;
+}
+.section10 .text .s1 {
+  opacity: 0;
+  transform: translate(-50px, 0);
+  transition: 2s ease 0.5s;
 }
 .section10 .arr {
+  transition: 2s ease 4s;
+}
+.section10.swiper-slide-active .text span.s1,
+.section10.swiper-slide-active .text span.s2 {
+  opacity: 1;
+  transform: translate(0, 0);
+}
+.section10.swiper-slide-active .arr {
   opacity: 1;
 }
 .section11 {
@@ -620,8 +713,18 @@ html,
   font: 40px/72px "";
   color: #fff;
   text-align: center;
+  opacity: 0;
+  transform: translate(0px, 50px);
+  transition: 2s ease .5s;
 }
 .section11 .arr {
+  transition: 2s ease 2s;
+}
+.section11.swiper-slide-active .text {
+  opacity: 1;
+  transform: translate(0, 0);
+}
+.section11.swiper-slide-active .arr {
   opacity: 1;
 }
 .section12 {
@@ -676,10 +779,12 @@ html,
 .section13 .location {
   position: absolute;
   left: 478px;
-  top: 186px;
+  top: 178px;
   background: url(images/location.png) no-repeat;
   width: 23px;
   height: 32px;
+  opacity: 0;
+  transform: scale(1.2, 1.2);
 }
 .section13 .shadow {
   position: absolute;
@@ -688,6 +793,9 @@ html,
   background: url(images/shadow.png) no-repeat;
   width: 20px;
   height: 8px;
+  transform: scale(0, 0);
+  transform-origin: left center;
+  transition: 0.25s ease 0.75s;
 }
 .section13 .tip {
   position: absolute;
@@ -696,8 +804,29 @@ html,
   background: url(images/tip.png) no-repeat;
   width: 320px;
   height: 142px;
+  opacity: 0;
+  transform: scale(0, 0);
+  transform-origin: center;
+  transition: 0.3s cubic-bezier(0.25, 0.1, 0.63, 1.5) 1.5s;
 }
 .section13 .arr {
+  opacity: 1;
+}
+.section13.swiper-slide-active .location {
+  opacity: 1;
+  animation: location 0.5s 1 0.5s;
+  transition: 0.5s ease 0.4s;
+  transform: scale(1, 1);
+  top: 186px;
+}
+.section13.swiper-slide-active .shadow {
+  transform: scale(1, 1);
+}
+.section13.swiper-slide-active .tip {
+  opacity: 1;
+  transform: scale(1, 1);
+}
+.section13.swiper-slide-active .arr {
   opacity: 1;
 }
 .section14 {
@@ -729,7 +858,7 @@ html,
   float: right;
   position: relative;
   width: 525px;
-  padding: 0 25px;
+  padding: 25px;
   background: #f7f7f7;
   overflow: hidden;
   border: 1px solid #e2e2e2;
@@ -738,15 +867,19 @@ html,
 .section14 .line .input input {
   display: block;
   width: 100%;
-  height: 80px;
-  font: 28px/80px "";
+  height: 30px;
+  font: 28px/30px "";
   color: #444;
   background-color: transparent;
   border: none;
+  box-shadow: none;
 }
 .section14 .line .select-cnt {
-  font: 28px/80px "";
+  font: 28px/30px "";
   color: #ccc;
+}
+.section14 .line .select-cnt.active {
+  color: #444;
 }
 .section14 .line select {
   display: block;
@@ -775,5 +908,23 @@ html,
   }
   100% {
     bottom: 40px;
+  }
+}
+@keyframes location {
+  0% {
+    transform: scale(1, 1);
+    top: 178px;
+  }
+  50% {
+    transform: scale(1.1, 1.1);
+    top: 176px;
+  }
+  75% {
+    transform: scale(1, 1);
+    top: 190px;
+  }
+  100% {
+    transform: scale(1, 1);
+    top: 186px;
   }
 }
