--- a/inviter.less
+++ b/inviter.less
@@ -350,7 +350,7 @@ body,html,.swiper-container{height: 100%;}
 			transform:translate(50px,0);
 			transition:2s ease 2s;
 		}
-		.s1{
+		span.s1{
 			opacity: 0;
 			transform:translate(-50px,0);
 			transition:2s ease 0.5s;
@@ -506,14 +506,19 @@ body,html,.swiper-container{height: 100%;}
 			}
 		}
 		.select-cnt{
-			font:28px/30px "";color: #ccc;
+			font:28px/30px "";color: #aaa;
 		}
 		.select-cnt.active{
 			color: #444;
 		}
 		select{
 			display: block;position: absolute;left: 0;top: 0;right: 0;bottom: 0;
-			opacity: 0;
+			opacity: 0;box-shadow: none;
+		}
+		textarea{
+			font:28px/42px "";display: block;color: #444;
+			width: 100%;height: 270px;
+			border:none;background: none;
 		}
 	}
 	.line-name{
@@ -524,6 +529,24 @@ body,html,.swiper-container{height: 100%;}
 	}
 	.line-wish{
 		margin-top: -125px;
+	}
+	.text_number{
+		float: right;clear: both;
+		margin-top: 20px;
+		font:24px/1 "";color: #aaa;
+	}
+	.info{
+		width: 670px;margin-top: 270px;padding-top: 40px;
+		text-align: center;font:26px/40px "";color: #777;
+		position: absolute;left: 40px;top: 50%;
+  		border-top: 1px solid #ccc;
+		p{
+			margin-top: 10px;
+			text-align: left;font:24px/40px "";
+		}
+		span:nth-child(2){
+			padding-left: 2em;
+		}
 	}
 }
 @keyframes arr { 
