--- a/inviter.less
+++ b/inviter.less
@@ -59,7 +59,7 @@ blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}
 body{font-size: 80px;line-height: 1;}
 body,html,.swiper-container{height: 100%;}
 .swiper-slide{
-	position: relative;
+	position: relative;overflow: hidden;
 }
 *{-webkit-tap-highlight-color:rgba(0,0,0,0)}
 .section1{
@@ -67,39 +67,40 @@ body,html,.swiper-container{height: 100%;}
 		position: absolute;left: 0;top: 0;right: 0;bottom: 0;
 		background: #042645;opacity: 0;
 		transition:1s ease 0.5s;
+		-webkit-transition:1s ease 0.5s;
 	}
 	.bg{
 		background: url(images/bg1.jpg);
 		background-size: cover;
 		position: absolute;left: 0;top: 0;right: 0;bottom: 0;
-		transition: 5s ease;
-		transform-origin: center bottom;
-		transform: scale(1.03,1.03);
+		transition: 5s ease;-webkit-transition: 5s ease;
+		transform-origin: center bottom;-webkit-transform-origin: center bottom;
+		transform: scale(1.03,1.03);-webkit-transform: scale(1.03,1.03);
 	}
 	.title{
 		position: absolute;left: 0;top: 240px;right: 0;text-align: center;color: #fff;
 		h1{
 			font: 140px/140px "Gill Sans";
 			opacity: 0;
-			transition:1.5s ease 1s;
+			transition:1.5s ease 1s;-webkit-transition:1.5s ease 1s;
 		}
 		span{
 			font:40px/60px "Gill Sans";
 			opacity: 0;
-			transition:1.5s ease 1.5s;
+			transition:1.5s ease 1.5s;-webkit-transition:1.5s ease 1.5s;
 		}
 	}
 	.time{
 		position: absolute;left: 0;right: 0;top: 650px;
 		font:60px/60px "Helvetica";color: #fff;text-align: center;
 		opacity: 0;
-		transition:1.5s ease 2s;
+		transition:1.5s ease 2s;-webkit-transition:1.5s ease 2s;
 	}
 	.name{
 		position: absolute;left: 0;right: 0;top: 725px;
 		font:40px/60px "Helvetica";color: #fff;text-align: center;
 		opacity: 0;
-		transition:1.5s ease 2.5s;
+		transition:1.5s ease 2.5s;-webkit-transition:1.5s ease 2.5s;
 		span{font-size: 28px;}
 	}
 }
@@ -108,13 +109,13 @@ body,html,.swiper-container{height: 100%;}
 	width: 88px;height: 48px;margin-left: -44px;
 	background: url(images/arr.png) center center no-repeat;
 	opacity: 0;
-	transition:2s ease 3s;
-	animation:arr 0.8s infinite;
+	transition:2s ease 3s;-webkit-transition:2s ease 3s;
+	animation:arr 0.8s infinite;-webkit-animation:arr 0.8s infinite;
 }
 .section1.swiper-slide-active{
 	.filter{opacity: 0.4;}
 	.title h1,.title span,.name,.time,.arr{opacity: 1;}
-	.bg{transform: scale(1.05,1.05);}
+	.bg{transform: scale(1.05,1.05);-webkit-transform: scale(1.05,1.05);}
 }
 
 .section2{
@@ -128,33 +129,30 @@ body,html,.swiper-container{height: 100%;}
 		opacity: 0;
 	}
 	li:nth-child(1){
-		transition:1s ease 0.5s;
+		transition:1s ease 0.5s;-webkit-transition:1s ease 0.5s;
 	}
 	li:nth-child(2){
-		transition:1s ease 1s;
+		transition:1s ease 1.25s;-webkit-transition:1s ease 1.25s;
 	}
 	li:nth-child(3){
-		transition:1s ease 1.5s;
+		transition:1s ease 2s;-webkit-transition:1s ease 2s;
 	}
 	li:nth-child(4){
 		margin-top: 60px;
-		transition:1s ease 2s;
+		transition:1s ease 3s;-webkit-transition:1s ease 3s;
 	}
 	li:nth-child(5){
-		transition:1s ease 2.5s;
+		transition:1s ease 3.75s;-webkit-transition:1s ease 3.75s;
 	}
 	li:nth-child(6){
 		margin-top: 60px;
-		transition:1s ease 3s;
+		transition:1s ease 4.75s;-webkit-transition:1s ease 4.75s;
 	}
 	li:nth-child(7){
-		transition:1s ease 3.5s;
-	}
-	li:nth-child(8){
-		transition:1s ease 4s;
+		transition:1s ease 5.5s;-webkit-transition:1s ease 5.5s;
 	}
 	.arr{
-		transition:2s ease 4.5s;
+		transition:2s ease 4.5s;-webkit-transition:2s ease 4.5s;
 	}
 }
 .section2.swiper-slide-active{
@@ -201,15 +199,15 @@ body,html,.swiper-container{height: 100%;}
 		font:40px/72px "";color: #fff;text-align: center;
 		.s51{
 			opacity: 0;
-			transition:2s ease 0.5s;
+			transition:2s ease 0.5s;-webkit-transition:2s ease 0.5s;
 		}
 		.s52{
 			opacity: 0;
-			transition:2s ease 1.5s;
+			transition:2s ease 1.5s;-webkit-transition:2s ease 1.5s;
 		}
 	}
 	.arr{
-		transition:2s ease 2.5s;
+		transition:2s ease 2.5s;-webkit-transition:2s ease 2.5s;
 	}
 }
 .section5.swiper-slide-active{
@@ -230,15 +228,15 @@ body,html,.swiper-container{height: 100%;}
 		font:40px/72px "";color: #fff;text-align: center;
 		.s61{
 			opacity: 0;
-			transition:2s ease 0.25s;
+			transition:2s ease 0.25s;-webkit-transition:2s ease 0.25s;
 		}
 		.s62{
 			opacity: 0;
-			transition:2s ease 1.25s;
+			transition:2s ease 1.25s;-webkit-transition:2s ease 1.25s;
 		}
 	}
 	.arr{
-		transition:2s ease 2.25s;
+		transition:2s ease 2.25s;-webkit-transition:2s ease 2.25s;
 	}
 }
 .section6.swiper-slide-active{
@@ -259,15 +257,15 @@ body,html,.swiper-container{height: 100%;}
 		font:40px/72px "";color: #fff;text-align: center;
 		.s71{
 			opacity: 0;
-			transition:2s ease 0.5s;
+			transition:2s ease 0.5s;-webkit-transition:2s ease 0.5s;
 		}
 		.s72{
 			opacity: 0;
-			transition:2s ease 1.5s;
+			transition:2s ease 1.5s;-webkit-transition:2s ease 1.5s;
 		}
 	}
 	.arr{
-		transition:2s ease 2.5s;
+		transition:2s ease 2.5s;-webkit-transition:2s ease 2.5s;
 	}
 }
 .section7.swiper-slide-active{
@@ -288,11 +286,11 @@ body,html,.swiper-container{height: 100%;}
 		font:40px/72px "";color: #fff;text-align: center;
 		.s81{
 			opacity: 0;
-			transition:2s ease 0.5s;
+			transition:2s ease 0.5s;-webkit-transition:2s ease 0.5s;
 		}
 	}
 	.arr{
-		transition:2s ease 1.5s;
+		transition:2s ease 1.5s;-webkit-transition:2s ease 1.5s;
 	}
 }
 .section8.swiper-slide-active{
@@ -313,24 +311,24 @@ body,html,.swiper-container{height: 100%;}
 		font:40px/72px "";color: #fff;text-align: center;
 		p:nth-child(1),p:nth-child(2){
 			opacity: 0;
-			transform:translate(0,80px);
-			transition:2s ease 0.5s;
+			transform:translate(0,80px);-webkit-transform:translate(0,80px);
+			transition:2s ease 0.5s;-webkit-transition:2s ease 0.5s;
 		};
 		p:nth-child(3),p:nth-child(4){
 			opacity: 0;
-			transform:translate(0,80px);
-			transition:2s ease 2s;
+			transform:translate(0,80px);-webkit-transform:translate(0,80px);
+			transition:2s ease 2s;-webkit-transition:2s ease 2s;
 		};
 	}
 	.arr{
-		transition:2s ease 4s;
+		transition:2s ease 4s;-webkit-transition:2s ease 4s;
 	}
 }
 .section9.swiper-slide-active{
 	.text{
 		p{
 			opacity: 1;
-			transform:translate(0,0);
+			transform:translate(0,0);-webkit-transform:translate(0,0);
 		}
 	}
 	.arr{
@@ -347,24 +345,24 @@ body,html,.swiper-container{height: 100%;}
 			display: block;
 			text-indent: 2.5em;
 			opacity: 0;
-			transform:translate(50px,0);
-			transition:2s ease 2s;
+			transform:translate(50px,0);-webkit-transform:translate(50px,0);
+			transition:2s ease 2s;-webkit-transition:2s ease 2s;
 		}
 		span.s1{
-			opacity: 0;
-			transform:translate(-50px,0);
-			transition:2s ease 0.5s;
+			opacity: 0;display: block;
+			transform:translate(-50px,0);-webkit-transform:translate(-50px,0);
+			transition:2s ease 0.5s;-webkit-transition:2s ease 0.5s;
 		}
 	}
 	.arr{
-		transition:2s ease 4s;
+		transition:2s ease 4s;-webkit-transition:2s ease 4s;
 	}
 }
 .section10.swiper-slide-active{
 	.text{
 		span.s1,span.s2{
 			opacity: 1;
-			transform:translate(0,0);
+			transform:translate(0,0);-webkit-transform:translate(0,0);
 		}
 	}
 	.arr{
@@ -378,17 +376,17 @@ body,html,.swiper-container{height: 100%;}
 		position: absolute;left: 0;right: 0;top: 100px-16;
 		font:40px/72px "";color: #fff;text-align: center;
 		opacity: 0;
-		transform:translate(0px,50px);
-		transition:2s ease .5s;
+		transform:translate(0px,50px);-webkit-transform:translate(0px,50px);
+		transition:2s ease .5s;-webkit-transition:2s ease .5s;
 	}
 	.arr{
-		transition:2s ease 2s;
+		transition:2s ease 2s;-webkit-transition:2s ease 2s;
 	}
 }
 .section11.swiper-slide-active{
 	.text{
 		opacity: 1;
-		transform:translate(0,0);
+		transform:translate(0,0);-webkit-transform:translate(0,0);
 	}
 	.arr{
 		opacity: 1;
@@ -435,25 +433,24 @@ body,html,.swiper-container{height: 100%;}
 		background: url(images/location.png) no-repeat;
 		width: 23px;height: 32px;
 		opacity: 0;
-		//transform:translate(0,-8px);
-		transform: scale(1.2,1.2);
+		transform: scale(1.2,1.2);-webkit-transform: scale(1.2,1.2);
 	}
 	.shadow{
 		position: absolute;left: 486px;top: 212px;
 		background: url(images/shadow.png) no-repeat;
 		width: 20px;height: 8px;
-		transform:scale(0,0);
-		transform-origin: left center;
-		transition:0.25s ease 0.75s;
+		transform:scale(0,0);-webkit-transform:scale(0,0);
+		transform-origin: left center;-webkit-transform-origin: left center;
+		transition:0.25s ease 0.75s;-webkit-transition:0.25s ease 0.75s;
 	}
 	.tip{
 		position: absolute;left: 333px;top: 75px;
 		background: url(images/tip.png) no-repeat;
 		width: 320px;height: 142px;
 		opacity: 0;
-		transform:scale(0,0);
-		transform-origin: center;
-		transition: 0.3s cubic-bezier(0.25, 0.1, 0.63, 1.5) 1.5s;
+		transform:scale(0,0);-webkit-transform:scale(0,0);
+		transform-origin: center;-webkit-transform-origin: center;
+		transition: 0.3s cubic-bezier(0.25, 0.1, 0.63, 1.5) 1.5s;-webkit-transition: 0.3s cubic-bezier(0.25, 0.1, 0.63, 1.5) 1.5s;
 	}
 	.arr{
 		opacity: 1;
@@ -462,18 +459,17 @@ body,html,.swiper-container{height: 100%;}
 .section13.swiper-slide-active{
 	.location{
 		opacity: 1;
-		//transform:translate(0,0);
-		animation:location 0.5s 1 0.5s;
-		transition:0.5s ease 0.4s;
-		transform: scale(1,1);
+		animation:location 0.5s 1 0.5s;-webkit-animation:location 0.5s 1 0.5s;
+		transition:0.5s ease 0.4s;-webkit-transition:0.5s ease 0.4s;
+		transform: scale(1,1);-webkit-transform: scale(1,1);
 		top: 186px;
 	}
 	.shadow{
-		transform:scale(1,1);
+		transform:scale(1,1);-webkit-transform:scale(1,1);
 	}
 	.tip{
 		opacity: 1;
-		transform:scale(1,1);
+		transform:scale(1,1);-webkit-transform:scale(1,1);
 	}
 	.arr{
 		opacity: 1;
@@ -517,7 +513,7 @@ body,html,.swiper-container{height: 100%;}
 		}
 		textarea{
 			font:28px/42px "";display: block;color: #444;
-			width: 100%;height: 270px;
+			width: 100%;height: 170px;
 			border:none;background: none;
 		}
 	}
@@ -548,17 +544,39 @@ body,html,.swiper-container{height: 100%;}
 			padding-left: 2em;
 		}
 	}
+	.submit{
+		position: absolute;
+		left: 140px;
+		background: rgb(58, 149, 157);
+		width: 470px;
+		height: 86px;
+		border: 1px solid #226E74;
+		border-radius: 43px;
+		top: 50%;
+		margin-top: 125px;
+		font: 34px/86px "";
+		text-align: center;
+		color: #fff;
+		&:hover{background:#226E74;};
+	}
 }
 @keyframes arr { 
 	0% {bottom:40px;} 
 	40% {bottom:30px;} 
 	100% {bottom: 40px;}
+}
+@-webkit-keyframes arr { 
+	0% {bottom:40px;} 
+	40% {bottom:30px;} 
+	100% {bottom: 40px;}
 } 
 @keyframes location{
-	//0% {transform: scale(1.2,1.2);transform:translate(0,-8px);}
-	//50% {transform: scale(1.2,1.2);transform:translate(0,-10px);}
-	//75% {transform: scale(1.2,1.2);transform:translate(0,4px);}
-	//100% {transform: scale(1,1);transform:translate(0,0);}
+	0% {transform: scale(1,1);top: 186px-8;}
+	50% {transform: scale(1.1,1.1);top: 186px-10;}
+	75% {transform: scale(1,1);top: 186px+4;}
+	100% {transform: scale(1,1);top: 186px;}
+}
+@-webkit-keyframes location{
 	0% {transform: scale(1,1);top: 186px-8;}
 	50% {transform: scale(1.1,1.1);top: 186px-10;}
 	75% {transform: scale(1,1);top: 186px+4;}
