--- a/inviter.less
+++ b/inviter.less
@@ -405,7 +405,7 @@ body,html,.swiper-container{height: 100%;}
 	.title{
 		position: absolute;left: 50px;top: 50%;
 		margin-top: -515px;
-		font:bold 90px/1 "Gill","Sans";color: #fff;
+		font: 90px/1 "Gill Sans";color: #fff;
 	}
 	.info{
 		position: absolute;left: 50px;top: 50%;
@@ -480,7 +480,7 @@ body,html,.swiper-container{height: 100%;}
 	.title{
 		position: absolute;left: 50px;top: 50%;
 		margin-top: -515px;
-		font:bold 90px/1 "Gill","Sans";color: #1e666c;
+		font: 90px/1 "Gill Sans";color: #1e666c;
 	}
 	.line{
 		position: absolute;left: 40px;right: 40px;top: 50%;
@@ -493,7 +493,7 @@ body,html,.swiper-container{height: 100%;}
 		.input{
 			float: right;position: relative;
 			width: 575px-50;padding: 22px;
-			background: #f7f7f7;overflow: hidden;
+			background: #f7f7f7 url(images/tri.png) no-repeat 200px 20px;overflow: hidden;
 			border:1px solid #e2e2e2;border-radius: 7px;
 			input{
 				display: block;width: 100%;height: 36px;
@@ -503,6 +503,7 @@ body,html,.swiper-container{height: 100%;}
 		}
 		.select-cnt{
 			font:28px/36px "";color: #aaa;
+			background: url(images/tri.png) no-repeat 505px 15px;
 		}
 		.select-cnt.active{
 			color: #444;
@@ -538,7 +539,10 @@ body,html,.swiper-container{height: 100%;}
   		border-top: 1px solid #ccc;
 		p{
 			margin-top: 10px;
-			text-align: left;font:24px/40px "";
+			text-align: left;font:24px/40px "";color: #888;
+		}
+		span{
+			font-weight: bold;
 		}
 		span:nth-child(2){
 			padding-left: 2em;
