--- a/inviter.less
+++ b/inviter.less
@@ -493,7 +493,7 @@ body,html,.swiper-container{height: 100%;}
 		.input{
 			float: right;position: relative;
 			width: 575px-50;padding: 22px;
-			background: #f7f7f7 url(images/tri.png) no-repeat 200px 20px;overflow: hidden;
+			background: #f7f7f7 ;overflow: hidden;
 			border:1px solid #e2e2e2;border-radius: 7px;
 			input{
 				display: block;width: 100%;height: 36px;
