--- a/inviter.less
+++ b/inviter.less
@@ -561,7 +561,7 @@ body,html,.swiper-container{height: 100%;}
 		font: 34px/86px "";
 		text-align: center;
 		color: #fff;
-		&:hover{background:#226E74;};
+		&:active{background:#226E74;};
 	}
 }
 @keyframes arr { 
